[package]
name = "tx-builder"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
bitcoin = { workspace = true }
bitvm = { workspace = true }
clementine-errors = { path = "../clementine-errors" }
clementine-primitives = { path = "../clementine-primitives" }
eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
