[package]
name = "bridge-circuit-core"
version = "1.0.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
risc0-zkvm = { version = "1.2.3", default-features = false, features = ["std"] }
risc0-groth16 = { version = "1.2.3" }
serde = { version = "1.0", optional = true, features = ["derive"] }
bitcoin = { version = "0.32.5", features = ["rand-std", "serde"] }
rand = { version = "0.8", features = ["small_rng"] }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ripemd = "0.1.3"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-groth16 = { version="0.5.0", default-features = false }
ark-std = "0.5.0"
ark-serialize = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-relations = "0.5.0"
borsh = {version = "1.5.3", features = ["derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
hex = "0.4.3"
once_cell = "1.10.0"
hex-literal = "0.4.1"
header-chain = { git="https://github.com/chainwayxyz/risc0-to-bitvm2.git", rev="a233e27" }
final-spv = { git="https://github.com/chainwayxyz/risc0-to-bitvm2.git", rev="a233e27" }
