[package]
name = "work-only-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
work-only-lib = { path = "../../../circuits-lib/work-only" }
bridge-circuit-core = { path = "../../../circuits-lib/core" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }