[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clementine-circuits = { path = "../../../circuits" }
risc0-zkvm = { version = "=1.1.2", default-features = false }
crypto-bigint = {version="=0.5.5", default-features = false}
sha2 = {version="=0.10.8", default-features = false}
serde = { version = "1.0", default-features = false }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
